# bitcoin_tx_rust

./: Cargo.toml  README.md
examples/: all_transactions.rs  bitcoin_core_test.rs  compare_legacy_segwit.rs  legacy_p2sh.rs  psbt.rs  sighash_timelocks.rs  taproot.rs
scripts/: bitcoin_core_integration.sh
src/: lib.rs
src/flags/: mod.rs  sighash.rs
src/legacy/: mod.rs  p2pkh.rs  p2sh.rs
src/psbt/: mod.rs  psbt.rs
src/segwit/: mod.rs  p2wpkh_multi_input.rs  p2wpkh_single_input.rs  p2wsh.rs
src/taproot/: mod.rs  p2tr.rs  schnorr.rs  taptree.rs
src/timelocks/: mod.rs  timelocks.rs
src/traits/: transaction.rs
src/utils/: address.rs  crypto.rs  keys.rs  mod.rs
