[package]
name = "bitcoin-tx-rust"
version = "0.1.0"
edition = "2024"
authors = ["Chinedu Nwadike <cenwadike@gmail.com>"]
description = "Educational Bitcoin transaction library implementing different bitcoin transactions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cenwadike/bitcoin_tx_rust"
keywords = ["bitcoin", "cryptocurrency", "blockchain", "transactions", "segwit"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "bitcoin_tx_rust"
path = "src/lib.rs"

[[example]]
name = "all_transactions"
path = "examples/all_transactions.rs"

[[example]]
name = "bitcoin_core_test"
path = "examples/bitcoin_core_test.rs"

[[example]]
name = "legacy_p2sh"
path = "examples/legacy_p2sh.rs"

[[example]]
name = "compare_legacy_segwit"
path = "examples/compare_legacy_segwit.rs"

[dependencies]
bitcoin = "0.31"
secp256k1 = { version = "0.28", features = ["rand-std"] }
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
bech32 = "0.11"
rand = "0.8"
serde_json = "1.0"
num-bigint = "0.4"                                        # For base58 encoding in P2SH
num-integer = "0.1.46"

[dev-dependencies]
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[features]
default = ["std"]
std = []
